--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -353,7 +353,7 @@ an Nvidia GRID K520 GPU that is composed of two 4 GB GK104 GPUs.
 \section{Network Architecture}
 \label{sec:Network Architecture}
 
-We took an iterative approach to build our neural network. Initially we implemented a low-complexity LSTM network, evaluated its performance by cross-validation, then attempted to improve its performance and robustness by adding additional components one at a time while evaluating performance.
+We took an iterative approach to build our neural network. Initially we implemented a low-complexity LSTM network, evaluated its performance by cross-validation, then attempted to improve its performance and robustness by adding further components one at a time while evaluating performance.
 
 \subsection{Initial Design}
 \label{sec:arch-simple}
@@ -425,7 +425,7 @@ The results from our initial implementation of the LSTM network are very encoura
 
 Miller performed much better than O'Connor but we still found that LSTM performed slightly better. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here for the same algorithm. However, \cite{Miller2009} only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. Miller also fails to discuss his cross-validation method and false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation and the larger dataset we tried to train on. Miller did achieve his performance including subjects with pathological gait, but given the small dataset, it is hard to say how many of his samples were really pathological and how much that affected performance.
 
-It is worth noticing that our implementation can do event detection in real time, both in the sense that it is computationally tractable and that our prediction is causal, relying only in past marker data. This makes our method unique, as we couldn't find anything on the literature that offered similar guarantees. Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
+It is worth noticing that our implementation can do event detection in real time, both in the sense that it is computationally tractable and that our prediction is causal, relying only in past marker data. This makes our method unique, as we couldn't find anything in the literature that offered similar guarantees. Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
 
 \subsection{Future work}
 Although our results are promising and seem to improve the current state-of-the-art, there a few things that still can be done to assess and improve performance:
