--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -397,7 +397,7 @@ As can be seen from Figure \ref{fig:paramSearch} a good learning rate was about 
 Once we settled on parameters for our network, we trained it for 100 epochs and tested it on dataset 1. We compared results from Miller's feed-forward network, O'Connor's heuristic and our LSTM network. We assessed the results as follows: if a detected event was less than 100ms apart from the actual event (ground truth derived from force-plates), we measured the difference in times and quantified it in a histogram. If the detected event was more than 100ms apart from the closest true event, we consider it a false positive. In the same way, if no event was detected within 100ms of an actual event, we consider it to be a false negative. All four possible events (left heel-strike, toe-off, right heel-strike and toe-off) were considered independetly.  Results are summarized on figure \ref{fig:halfAndHalfTrials}. Each plot represents the histogram of time differences between actual and detected events when they are within a 100ms window of each other. At the top of each plot appear the total number of false positives (fp) and false negatives (fn) for each of the methods compared. O'Connor's results were very poor compared to other methods (larger bias and variance), so they were excluded from the figure. The three methods that appear in the figure are: Miller with the default parameters (33 hidden units), LSTM network of 100 units trained over 30 or 50 epochs, to show the convergence. From this figure we can see that performance of all three algorithms in terms of bias ($\mu$) and standard deviation ($\sigma$) is comparable. However, the LSTM network performs better in terms of false negatives and false positives, with almost no bad detections or missed events, while Miller's has a significant amount of false positives especially.\\
 
 
-\begin{figure}[H]
+\begin{figure}
  \centering
  \includegraphics[scale=.45]{./figures/Test1_2Train1_1Compare.png}
  % \includesvg[scale=.31]{./figures/Test1_1Train1_2Compare.svg}
@@ -409,7 +409,7 @@ Once we settled on parameters for our network, we trained it for 100 epochs and 
 \subsection{Dataset 2}
 The second dataset was designed to assess how well the methods generalize to new users. We performed the same treatment as for the previous dataset, and results are shown on \ref{fig:halfAndHalfUsers}. From these results we can see that the LSTM network achieves better accuracy than Miller, with less false positives and false negatives. However, the false positive rate is somewhat high for the LSTM network too. It can also be seen that for the LSTM network trained over 50 epochs that some overfitting is happening, as the number of false positives increases noticeably, and accuracy is also slightly reduced. We didn't implement any way to prevent over-fitting, so this is not too surprising. Perhaps it is good news that 30 epochs of training suffice to achieve the network's optimal performance.
 
-\begin{figure}[H]
+\begin{figure}
  \centering
  \includegraphics[scale=.45]{./figures/Test2_1Train2_2Compare.png}
   %\includesvg[scale=.4]{./figures/Test2_2Train2_1Compare.svg}
@@ -438,7 +438,7 @@ Although our results are promising and seem to improve the current state-of-the-
  \item Investigate possible pre-processing to guarantee that method is invariant to walking speed, and subject height and weight.
  \item Study possible modifications to make the network truly invariant to the left/right symmetry. Currently the network is trained to output events for both legs with marker data from both sides of the body, but we know that the symmetry of the problem could be exploited further. However, this could prove to be an issue on subjects with highly asymmetrical gait.
  \item Incorporate prior information from the transitions that occurr during gait. In normal walking the events happen in a pre-established order (left heel-strike - right toe-off - right heel-strike - left toe-off) which gives us some information on the possible upcoming transitions based on the current state. While we can speculate that a recursive NN learns this with training, we could incorporate this information for better accuracy during normal walking conditions.
- \item Reduce the number of markers used to achive performance. While ours is a rich dataset, not all captures of motion data will include all the markers used. Furthermore we can expect the feet markers to contain the most information about the events.
+ \item Reduce the number of markers used to achive performance. While ours is a rich dataset, not all  motion-capture datasets will include all the markers used. Furthermore we can expect the feet markers to contain the most information about the events, while other markers may be more easily discarded.
 \end{enumerate}
 
 
