--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -418,6 +418,8 @@ The second dataset was designed to assess how well the methods generalize to new
  \label{fig:halfAndHalfUsers}
 \end{figure}
 
+\vskip 20em
+
 \section{Conclusion and Future Work}
 \label{sec:Conclusion and Future Work}
 \subsection{Conclusions}
