--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -394,7 +394,7 @@ As can be seen from Figure \ref{fig:paramSearch} a good learning rate was about 
 \label{sec:Results}
 
 \subsection{Dataset 1}
-Once we settled on parameters for our network, we trained it for 100 epochs and tested it on dataset 1. We compared results from Miller's feed-forward network, O'Connor's heuristic and our LSTM network. We assessed the results as follows: if a detected event was less than 100ms apart from the actual event (ground truth derived from force-plates), we measured the difference in times and quantified it in a histogram. If the detected event was more than 100ms apart from the closest true event, we consider it a false positive. In the same way, if no event was detected within 100ms of an actual event, we consider it to be a false negative. All four possible events (left heel-strike, toe-off, right heel-strike and toe-off) were considered independetly.  Results are summarized on figure \ref{fig:halfAndHalfTrials}. Each plot represents the histogram of time differences between actual and detected events when they are within a 100ms window of each other. At the top of each plot appear the total number of false positives (fp) and false negatives (fn) for each of the methods compared. O'Connor's results were very poor compared to other methods (larger bias and variance), so they were excluded from the figure. The three methods that appear in the figure are: Miller with the default parameters (33 hidden units), LSTM network of 100 units trained over 30 or 50 epochs, to show the convergence. From this figure we can see that performance of all three algorithms in terms of bias ($\mu$) and standard deviation ($\sigma$) is comparable. However, the LSTM network performs better in terms of false negatives and false positives, with almost no bad detections or missed events, while Miller's has a significant amount of false positives especially.\\
+Once we settled on parameters for our network, we trained it for 100 epochs and tested it on dataset 1. We compared results from the feed-forward network (ff-NN from now on) method , FVA and our LSTM network. We assessed the results as follows: if a detected event was less than 100ms apart from the actual event (ground truth derived from force-plates), we measured the difference in times and quantified it in a histogram. If the detected event was more than 100ms apart from the closest true event, we consider it a false positive. In the same way, if no event was detected within 100ms of an actual event, we consider it to be a false negative. All four possible events (left heel-strike, toe-off, right heel-strike and toe-off) were considered independetly.  Results are summarized on figure \ref{fig:halfAndHalfTrials}. Each plot represents the histogram of time differences between actual and detected events when they are within a 100ms window of each other. At the top of each plot appear the total number of false positives (fp) and false negatives (fn) for each of the methods compared. FVA's results were very poor compared to other methods (larger bias and variance), so they were excluded from the figure. The three methods that appear in the figure are: ff-NN with the default parameters (33 hidden units), LSTM network of 100 units trained over 30 or 50 epochs, to show the convergence. From this figure we can see that performance of all three algorithms in terms of bias ($\mu$) and standard deviation ($\sigma$) is comparable. However, the LSTM network performs better in terms of false negatives and false positives, with almost no bad detections or missed events, while ff-NN has a significant amount of false positives especially.\\
 
 
 \begin{figure}
@@ -402,28 +402,28 @@ Once we settled on parameters for our network, we trained it for 100 epochs and 
  \includegraphics[scale=.45]{./figures/Test1_2Train1_1Compare.png}
  % \includesvg[scale=.31]{./figures/Test1_1Train1_2Compare.svg}
  % Test1_1Train1_2Compare.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
- \caption{Comparison of Miller vs. LSTM network for various training intervals, for dataset 1.}
+ \caption{Comparison of ff-NN vs. LSTM network for various training intervals, for dataset 1.}
  \label{fig:halfAndHalfTrials}
 \end{figure}
 
 \subsection{Dataset 2}
-The second dataset was designed to assess how well the methods generalize to new users. We performed the same treatment as for the previous dataset, and results are shown on \ref{fig:halfAndHalfUsers}. From these results we can see that the LSTM network achieves better accuracy than Miller, with less false positives and false negatives. However, the false positive rate is somewhat high for the LSTM network too. It can also be seen that for the LSTM network trained over 50 epochs that some overfitting is happening, as the number of false positives increases noticeably, and accuracy is also slightly reduced. We didn't implement any way to prevent over-fitting, so this is not too surprising. Perhaps it is good news that 30 epochs of training suffice to achieve the network's optimal performance.
+The second dataset was designed to assess how well the methods generalize to new users. We performed the same treatment as for the previous dataset, and results are shown on \ref{fig:halfAndHalfUsers}. From these results we can see that the LSTM network achieves better accuracy than ff-NN, with less false positives and false negatives. However, the false positive rate is somewhat high for the LSTM network too. It can also be seen that for the LSTM network trained over 50 epochs that some overfitting is happening, as the number of false positives increases noticeably, and accuracy is also slightly reduced. We didn't implement any way to prevent over-fitting, so this is not too surprising. Perhaps it is good news that 30 epochs of training suffice to achieve the network's optimal performance.
 
 \begin{figure}
  \centering
  \includegraphics[scale=.45]{./figures/Test2_1Train2_2Compare.png}
   %\includesvg[scale=.4]{./figures/Test2_2Train2_1Compare.svg}
  % Test1_1Train1_2Compare.png: 0x0 pixel, 300dpi, 0.00x0.00 cm, bb=
- \caption{Comparison of Miller vs. LSTM network for various training intervals, for dataset 2.}
+ \caption{Comparison of ff-NN vs. LSTM network for various training intervals, for dataset 2.}
  \label{fig:halfAndHalfUsers}
 \end{figure}
 
 \section{Conclusion and Future Work}
 \label{sec:Conclusion and Future Work}
 \subsection{Conclusions}
-The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. O'Connor's heuristic performed very poorly, with biases and standard deviations tens of milliseconds larger than what Miller and the LSTM network achieved. This is not too surprising since O'Connor is a fixed heuristic method with no way to adapt to the data (requires no training).
+The results from our initial implementation of the LSTM network are very encouraging. Compared to the baseline methods, we achieved less confusion (false positive and false negative rate) and similar or better accuracy, measured through bias and quadratic error. FVA performed very poorly, with biases and standard deviations tens of milliseconds larger than what ff-NN and the LSTM network achieved. This is not too surprising since FVA is a fixed heuristic method with no way to adapt to the data (requires no training).
 
-Miller performed much better than O'Connor but we still found that LSTM performed slightly better. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here for the same algorithm. However, \cite{Miller2009} only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. Miller also fails to discuss his cross-validation method and false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation and the larger dataset we tried to train on. Miller did achieve his performance including subjects with pathological gait, but given the small dataset, it is hard to say how many of his samples were really pathological and how much that affected performance.
+ff-NN performed much better than FVA but we still found that LSTM performed slightly better. In \cite{Miller2009} the reported results for the method are similar (although slightly worse) than what we found here for the same algorithm. However, \cite{Miller2009} only uses 72 gait cycles (total) for his training, which is a lot smaller than our dataset. The ff-NN also fails to discuss his cross-validation method and false detection rates, so it is not clear whether the high false positive rate was an issue for him or whether it is an artifact of our implementation and the larger dataset we tried to train on. \cite{Miller2009} did achieve his performance including subjects with pathological gait, but given the small dataset, it is hard to say how many of his samples were really pathological and how much that affected performance.
 
 It is worth noticing that our implementation can do event detection in real time, both in the sense that it is computationally tractable and that our prediction is causal, relying only in past marker data. This makes our method unique, as we couldn't find anything in the literature that offered similar guarantees. Overall, the results we obtained are satisfying and we expect to polish them a little further before submitting them for publication in a gait research journal.
 
